# components/dms2223backend/dms2223backend/openapi/spec.yml
@@ -844,54 +844,56 @@ paths:
   #     security:
   #       - user_token: []
   #         api_key: []
-  # /comments/{cid}/reports:
-  #   post:
-  #     summary: Reports a comment
-  #     description: |
-  #       This operation will report a comment to be reviewed by a moderator.
 
-  #       The owner of the report will be automatically retrieved from the
-  #       user token against the authorization server.
-  #     # operationId: TODO: Set to the fully-qualified name of the function handling the operation
-  #     parameters:
-  #       - $ref: '#/components/parameters/CommentIdPathParam'
-  #     requestBody:
-  #       content:
-  #         'application/json':
-  #           schema:
-  #             $ref: '#/components/schemas/CommentReportCreationModel'
-  #           example:
-  #             reason: Ambiguous sentiment
-  #     responses:
-  #       '201':
-  #         description: The created report.
-  #         content:
-  #           'application/json':
-  #             schema:
-  #               $ref: '#/components/schemas/CommentReportFullModel'
-  #             example:
-  #               id: 1
-  #               cid: 7
-  #               reason: Ambiguous sentiment
-  #               status: PENDING
-  #               owner:
-  #                 username: user4
-  #               timestamp: 1665922785
-  #       '404':
-  #         description: The comment does not exist.
-  #         content:
-  #           'text/plain':
-  #             schema:
-  #               type: string
-  #             example: 'The comment with cid 75 does not exist.'
-  #     tags:
-  #       - discussion
-  #       - moderation
-  #       - comments
-  #       - reports
-  #     security:
-  #       - user_token: []
-  #         api_key: []
+  /comments/{id}/reports:
+    post:
+      summary: Reports a comment
+      description: |
+        This operation will report a comment to be reviewed by a moderator.
+
+        The owner of the report will be automatically retrieved from the
+        user token against the authorization server.
+      operationId: dms2223backend.presentation.rest.moderate.create_comment_report
+      parameters:
+        - $ref: '#/components/parameters/CommentIdPathParam'
+      requestBody:
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/CommentReportCreationModel'
+            example:
+              reason: Ambiguous sentiment
+      responses:
+        '201':
+          description: The created report.
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/CommentReportFullModel'
+              example:
+                id: 1
+                cid: 7
+                reason: Ambiguous sentiment
+                status: PENDING
+                owner:
+                  username: user4
+                timestamp: 1665922785
+        '404':
+          description: The comment does not exist.
+          content:
+            'text/plain':
+              schema:
+                type: string
+              example: 'The comment with cid 75 does not exist.'
+      tags:
+        - discussion
+        - moderation
+        - comments
+        - reports
+      security:
+        - user_token: []
+          api_key: []
+
   /comments/reports:
     get:
       summary: Get a list of comment reports.
