# components/dms2223backend/dms2223backend/presentation/rest/moderate.py
@@ -66,6 +66,59 @@ def create_report(body: Dict) -> Tuple[Union[Dict, str], Optional[int]]:
             return ('The user with the given username can not create a report', HTTPStatus.FORBIDDEN.value)
     return (report, HTTPStatus.OK.value)
 
+def create_comment_report(body: Dict) -> Tuple[Union[Dict, str], Optional[int]]:
+    """Creates a report if the requestor has the report role.
+
+    Args:
+        - body (Dict): A dictionary with the new report's data.
+        - token_info (Dict): A dictionary of information provided by the security schema handlers.
+
+    Returns:
+        - Tuple[Union[Dict, str], Optional[int]]: On success, a tuple with the dictionary of the
+          new user data and a code 201 CREATED. On error, a description message and code:
+            - 400 BAD REQUEST when a mandatory argument is missing.
+            - 403 FORBIDDEN when the requestor does not have the rights to create the report.
+            - 409 CONFLICT if an existing user already has all or part of the unique user's data.
+    """
+    with current_app.app_context():
+        try:
+            
+            report: Dict = reportsServices.create_report_comment(
+                body['id'],body['content'],current_app.db
+            )
+        except ValueError:
+            return ('A mandatory argument is missing', HTTPStatus.BAD_REQUEST.value)
+        except OperationError:
+            return ('The user with the given username can not create a report', HTTPStatus.FORBIDDEN.value)
+    return (report, HTTPStatus.OK.value)
+
+
+def create_report(body: Dict) -> Tuple[Union[Dict, str], Optional[int]]:
+    """Creates a report if the requestor has the report role.
+
+    Args:
+        - body (Dict): A dictionary with the new report's data.
+        - token_info (Dict): A dictionary of information provided by the security schema handlers.
+
+    Returns:
+        - Tuple[Union[Dict, str], Optional[int]]: On success, a tuple with the dictionary of the
+          new user data and a code 201 CREATED. On error, a description message and code:
+            - 400 BAD REQUEST when a mandatory argument is missing.
+            - 403 FORBIDDEN when the requestor does not have the rights to create the report.
+            - 409 CONFLICT if an existing user already has all or part of the unique user's data.
+    """
+    with current_app.app_context():
+        try:
+            
+            report: Dict = reportsServices.create_report_comment(
+                body['id'],body['content'],current_app.db
+            )
+        except ValueError:
+            return ('A mandatory argument is missing', HTTPStatus.BAD_REQUEST.value)
+        except OperationError:
+            return ('The user with the given username can not create a report', HTTPStatus.FORBIDDEN.value)
+    return (report, HTTPStatus.OK.value)
+
 def get_report_by_id(id: int) -> Tuple[Union[Dict, str], Optional[int]]:
     """Get a report by id.
 
